# chester

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  chester.yaml  chester.yaml.example  conftest.py  demo_v2.py  prepare.sh  pyproject.toml
.github/workflows/: release.yml
docs/: backends.md  configuration.md  git-snapshot.md  hydra.md  index.md  migration-v1-to-v2.md  parameter-sweeps.md  singularity.md  submodule-pinning.md  user-guide.md
docs/examples/: multi-gpu-ssh.yaml  simple.yaml  singularity-slurm.yaml
docs/legacy/: migration-v1-to-v2.md
docs/plans/: 2026-02-25-architecture-overhaul.md  2026-02-25-slurm-job-tracking.md  2026-03-10-persistent-job-store-cli.md
examples/: chester.yaml.example
scripts/: bump_version.py
tests/: .env.example  chester.yaml.example  launch_mnist.py  launch_test_extra_pull.py  live_slurm_validation.py  prepare.sh  pyproject.toml  rsync_exclude  rsync_include  test_auto_pull.py  test_backend_config.py  test_backend_local.py  test_backend_registry.py  test_backend_slurm.py  test_backend_ssh.py  test_cli.py  test_config.py  test_config_v2.py  test_confirm_action.py  test_deprecation.py  test_extra_pull.py  test_fresh_start.py  test_git_snapshot.py  test_hydra_utils.py  test_integration.py  test_job_store.py  test_local.py  test_monitor.py  test_run_exp.py  test_run_exp_v2.py  test_sequential_deps.py  test_sequential_steps.py  test_serial_local.py  test_serial_script_gen.py  test_serial_variants.py  test_slurm_live.py  test_submodule_worktrees.py  test_time_utils.py  test_utils.py  train_mnist.py
(+40 files in other folders)
